# soii21-jmambrini

./: AUTHORS
mbr/: .dist  Makefile  main.c  main.s  mbr.c  mbr.s
tools/: Makefile-head-pack  Makefile.am  bintools.m4  bintools.makefile  c-head-pack.c  debug.h  docm4.am  docm4.m4  hex2bin.c  main.c  main.sh  stripcomment-funct.c  stripcomment.c  syseg.c
tyos/: Makefile  Makefile.m4  README.m4  core.c  core.s  mbr.c  mbr.h  mbr.s  stage2.c  stage2.s  tyos.c  tyos.h  tyos.img  tyos.patch  tyos.s
